--- a/web/src/styles/variable.scss
+++ b/web/src/styles/variable.scss
@@ -54,8 +54,8 @@
   --vxe-table-popup-border-color: var(--el-border-color-light);
 
   /*modal*/
-  --vxe-modal-header-background-color:var(--el-bg-color);
-  --vxe-modal-body-background-color:var(--el-bg-color);
+  --vxe-modal-header-background-color: var(--el-bg-color);
+  --vxe-modal-body-background-color: var(--el-bg-color);
 
   /*table*/
   --vxe-table-header-font-color: var(--el-text-color-regular);
@@ -122,8 +122,8 @@
   // --vxe-table-checkbox-range-border-color: #{$vxe-table-checkbox-range-border-color};
   // --vxe-table-checkbox-range-background-color: #{$vxe-table-checkbox-range-background-color};
 
-  --vxe-table-fixed-left-scrolling-box-shadow: 8px 0px 10px -5px var(--el-shadow-color);
-  --vxe-table-fixed-right-scrolling-box-shadow: -8px 0px 10px -5px var(--el-shadow-color);
+  // --vxe-table-fixed-left-scrolling-box-shadow: 8px 0px 10px -5px var(--el-shadow-color);
+  // --vxe-table-fixed-right-scrolling-box-shadow: -8px 0px 10px -5px var(--el-shadow-color);
 
   /*filter*/
   --vxe-table-filter-panel-background-color: var(--el-color-primary-light-9);
