--- a/web/src/styles/reset.scss
+++ b/web/src/styles/reset.scss
@@ -4,19 +4,21 @@
  */
 html,
 body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
 * {
   padding: 0;
   margin: 0;
   border: 0;
+  font-family: Arial;
 }
 
-li{
+li {
   list-style: none;
 }
 
+.dark {
+  animation: 2.5s cubic-bezier(0.25, 1, 0.3, 1) wipe-in-left both;
+}
+
+.light {
+  animation: 2.5s cubic-bezier(0.25, 1, 0.3, 1) circle-in-top-right both;
+}
