--- a/web/src/styles/base.scss
+++ b/web/src/styles/base.scss
@@ -20,15 +20,18 @@
 .app-name {
   position: relative;
   overflow: hidden;
+  background-position: 0;
+  color: #283248;
+  font-weight: 550;
   text-overflow: ellipsis;
   white-space: nowrap;
   min-width: 120px;
+  line-height: 35px;
   font-size: 16px;
   text-align: center;
-  line-height: 30px;
-  background-size: 100% 30px !important;
-  background-position: 0;
-  color: #76d7fa;
+
+  background-size: 100% 35px !important;
+
   background: url("https://cos-1307762674.cos.ap-shanghai.myqcloud.com/picture/system/%E8%BE%93%E5%85%A5%E6%A1%86.png")
     no-repeat center;
   &:hover {
