--- a/app/src/styles/reset.scss
+++ b/app/src/styles/reset.scss
@@ -3,14 +3,7 @@
  * http://cssreset.com
  */
 html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-* {
+body {
   padding: 0;
   margin: 0;
   border: 0;
