【ADD】新增字典翻译

--- a/web/src/styles/element.scss
+++ b/web/src/styles/element.scss
@@ -1,1 +1,15 @@
+.--el-color-danger-light-9 {
+  background-color: var(--el-color-danger-light-9);
+}
 
+.--el-color-warning-light-9 {
+  background-color: var(--el-color-warning-light-9);
+}
+
+.--el-color-primary-light-9 {
+  background-color: var(--el-color-primary-light-9);
+}
+
+.--el-color-success-light-9 {
+  background-color: var(--el-color-success-light-9);
+}
