--- a/web/src/styles/base.scss
+++ b/web/src/styles/base.scss
@@ -28,14 +28,11 @@
   line-height: 35px;
   font-size: 16px;
   text-align: center;
-  color: #5090ff;
-  font-family: "YourFontName", sans-serif;
+  color: #283248;
+  // font-family: "YourFontName", sans-serif;
   background-size: 100% 35px !important;
   background: url("https://cos-1307762674.cos.ap-shanghai.myqcloud.com/picture/system/%E8%BE%93%E5%85%A5%E6%A1%86.png")
     no-repeat center;
-  &:hover {
-    color: #76d7fa;
-  }
 }
 
 .rotate180 {
