--- a/web/src/styles/animate.scss
+++ b/web/src/styles/animate.scss
@@ -133,3 +133,14 @@
     clip-path: polygon(0 0, 0 0, 0 0, 0 50%);
   }
 }
+
+@keyframes ripple {
+  from {
+    transform: scale(0);
+    opacity: 1;
+  }
+  to {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
